--- a/job_status.html
+++ b/job_status.html
@@ -111,6 +111,7 @@ tbody tr:hover{
   text-decoration:none;
   font-size:13px;
   font-weight:bold;
+  display:inline-block;
 }
 .btn-pdf:hover{
   background:#08306b;
@@ -180,7 +181,8 @@ tbody tr:hover{
 /* ===============================
  CONFIG
 =============================== */
-const API_URL = "https://script.google.com/macros/s/AKfycbzPlxZPUvYTiiVPhum7JDbarfIfbpZ2c8_tJa7AZb4OypRJwFB171oC-UqpDdkKMdEhSA/exec";
+const API_URL =
+  "https://script.google.com/macros/s/AKfycbzPlxZPUvYTiiVPhum7JDbarfIfbpZ2c8_tJa7AZb4OypRJwFB171oC-UqpDdkKMdEhSA/exec";
 
 let jobs = [];
 
@@ -188,24 +190,26 @@ let jobs = [];
  LOAD DATA
 =============================== */
 fetch(API_URL + "?mode=jobStatus")
-.then(r => r.json())
-.then(data => {
-  jobs = data || [];
-  render();
-})
-.catch(()=>{
-  document.getElementById("tbody").innerHTML =
-    `<tr><td colspan="6" class="empty">❌ Load failed</td></tr>`;
+  .then(r => r.json())
+  .then(data => {
+    jobs = Array.isArray(data) ? data : [];
+    render();
+  })
+  .catch(() => {
+    document.getElementById("tbody").innerHTML =
+      `<tr><td colspan="6" class="empty">❌ Load failed</td></tr>`;
+  });
+
+/* ===============================
+ FILTER EVENTS
+=============================== */
+["fWo","fAsset","fProblem","fPriority","fStatus"].forEach(id=>{
+  document.getElementById(id).addEventListener("input", render);
 });
 
 /* ===============================
- FILTER + RENDER
+ RENDER TABLE
 =============================== */
-const filters = ["fWo","fAsset","fProblem","fPriority","fStatus"];
-filters.forEach(id=>{
-  document.getElementById(id).addEventListener("input",render);
-});
-
 function render(){
   const wo = fWo.value.toLowerCase();
   const asset = fAsset.value.toLowerCase();
@@ -214,30 +218,38 @@ function render(){
   const st = fStatus.value;
 
   const rows = jobs.filter(j=>{
-    return (!wo || j.wo_id.toLowerCase().includes(wo)) &&
-           (!asset || j.asset_id.toLowerCase().includes(asset)) &&
-           (!prob || j.problem.toLowerCase().includes(prob)) &&
+    return (!wo || (j.wo_id||"").toLowerCase().includes(wo)) &&
+           (!asset || (j.asset_id||"").toLowerCase().includes(asset)) &&
+           (!prob || (j.problem||"").toLowerCase().includes(prob)) &&
            (!pri || j.priority === pri) &&
            (!st || j.status === st);
   });
 
   const tbody = document.getElementById("tbody");
+
   if(!rows.length){
-    tbody.innerHTML = `<tr><td colspan="6" class="empty">ไม่มีงานค้าง</td></tr>`;
+    tbody.innerHTML =
+      `<tr><td colspan="6" class="empty">ไม่มีงานค้าง</td></tr>`;
     return;
   }
 
-  tbody.innerHTML = rows.map(j=>`
+  tbody.innerHTML = rows.map(j => `
     <tr>
-      <td><b>${j.wo_id}</b></td>
-      <td>${j.asset_id}</td>
-      <td>${j.problem}</td>
-      <td>${j.priority}</td>
-      <td><span class="badge ${j.status}">${j.status}</span></td>
+      <td><b>${j.wo_id || "-"}</b></td>
+      <td>${j.asset_id || "-"}</td>
+      <td>${j.problem || "-"}</td>
+      <td>${j.priority || "-"}</td>
       <td>
-        ${j.pdf_url 
+        <span class="badge ${j.status}">
+          ${j.status}
+        </span>
+      </td>
+      <td>
+        ${
+          j.pdf_url && j.pdf_url.startsWith("http")
           ? `<a href="${j.pdf_url}" target="_blank" class="btn-pdf">📄 View PDF</a>`
-          : '-'}
+          : "-"
+        }
       </td>
     </tr>
   `).join("");
