--- a/index.html
+++ b/index.html
@@ -78,10 +78,16 @@
         Create Work Order
       </a>
 
-      <!-- JOB STATUS (Technician) -->
+      <!-- ดูสถานะงาน + PDF -->
       <a href="job_status.html">
         📋<br>
-        JOB STATUS
+        Job Status
+      </a>
+
+      <!-- ช่างเริ่มงาน / จบงาน -->
+      <a href="technician_action.html">
+        ▶️⏹️<br>
+        Technician Action
       </a>
 
       <!-- เตรียมต่อยอด -->
