--- a/job_status.html
+++ b/job_status.html
@@ -1,197 +1,13 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-<meta charset="UTF-8">
-<title>Technician – Job Status</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body{
-  font-family: Arial, sans-serif;
-  background:#f4f6f9;
-  margin:0;
-}
-
-/* Header */
-.header{
-  background:#1f3c88;
-  color:#fff;
-  padding:16px 24px;
-  display:flex;
-  align-items:center;
-  gap:12px;
-  font-size:20px;
-  font-weight:bold;
-}
-.header a{
-  color:#fff;
-  text-decoration:none;
-  font-size:16px;
-  padding:6px 12px;
-  background:#0d47a1;
-  border-radius:6px;
-}
-
-/* Container */
-.container{
-  max-width:1200px;
-  margin:20px auto;
-  padding:0 16px;
-}
-
-/* Filters */
-.filters{
-  display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
-  gap:12px;
-  margin-bottom:16px;
-}
-.filters input,
-.filters select{
-  padding:10px;
-  border-radius:6px;
-  border:1px solid #ccc;
-  font-size:14px;
-}
-
-/* Table */
-.table-wrap{
-  background:#fff;
-  border-radius:12px;
-  overflow:hidden;
-  box-shadow:0 4px 10px rgba(0,0,0,0.1);
-}
-table{
-  width:100%;
-  border-collapse:collapse;
-}
-thead{
-  background:#1f3c88;
-  color:#fff;
-}
-th,td{
-  padding:12px 14px;
-  text-align:left;
-  font-size:14px;
-}
-tbody tr{
-  border-bottom:1px solid #eee;
-}
-tbody tr:hover{
-  background:#f9fbff;
-}
-
-/* Status badge */
-.badge{
-  padding:4px 10px;
-  border-radius:20px;
-  font-weight:bold;
-  font-size:12px;
-  display:inline-block;
-}
-.badge.OPEN{
-  background:#ffeb3b;
-  color:#000;
-}
-.badge.IN_PROGRESS{
-  background:#03a9f4;
-  color:#fff;
-}
-.badge.CLOSED{
-  background:#4caf50;
-  color:#fff;
-}
-
-/* PDF Button */
-.btn-pdf{
-  padding:6px 12px;
-  background:#0d47a1;
-  color:#fff;
-  border-radius:6px;
-  text-decoration:none;
-  font-size:13px;
-  font-weight:bold;
-  display:inline-block;
-}
-.btn-pdf:hover{
-  background:#08306b;
-}
-
-/* Empty */
-.empty{
-  text-align:center;
-  padding:24px;
-  color:#666;
-}
-</style>
-</head>
-
-<body>
-
-<div class="header">
-  <a href="index.html">← Home</a>
-  🔧 Technician – Job Status
-</div>
-
-<div class="container">
-
-  <!-- Filters -->
-  <div class="filters">
-    <input id="fWo" placeholder="WO ID">
-    <input id="fAsset" placeholder="Asset">
-    <input id="fProblem" placeholder="Problem">
-
-    <select id="fPriority">
-      <option value="">All Priority</option>
-      <option>Critical</option>
-      <option>High</option>
-      <option>Medium</option>
-      <option>Low</option>
-    </select>
-
-    <select id="fStatus">
-      <option value="">All Status</option>
-      <option>OPEN</option>
-      <option>IN_PROGRESS</option>
-    </select>
-  </div>
-
-  <!-- Table -->
-  <div class="table-wrap">
-    <table>
-      <thead>
-        <tr>
-          <th>WO ID</th>
-          <th>Asset</th>
-          <th>Problem</th>
-          <th>Priority</th>
-          <th>Status</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="tbody">
-        <tr><td colspan="6" class="empty">⏳ Loading...</td></tr>
-      </tbody>
-    </table>
-  </div>
-
-</div>
-
 <script>
-/* ===============================
- CONFIG
-=============================== */
 const API_URL =
   "https://script.google.com/macros/s/AKfycbzPlxZPUvYTiiVPhum7JDbarfIfbpZ2c8_tJa7AZb4OypRJwFB171oC-UqpDdkKMdEhSA/exec";
 
 let jobs = [];
 
-/* ===============================
- LOAD DATA
-=============================== */
 fetch(API_URL + "?mode=jobStatus")
   .then(r => r.json())
   .then(data => {
+    console.log("JOB STATUS:", data);
     jobs = Array.isArray(data) ? data : [];
     render();
   })
@@ -200,16 +16,10 @@ fetch(API_URL + "?mode=jobStatus")
       `<tr><td colspan="6" class="empty">❌ Load failed</td></tr>`;
   });
 
-/* ===============================
- FILTER EVENTS
-=============================== */
 ["fWo","fAsset","fProblem","fPriority","fStatus"].forEach(id=>{
   document.getElementById(id).addEventListener("input", render);
 });
 
-/* ===============================
- RENDER TABLE
-=============================== */
 function render(){
   const wo = fWo.value.toLowerCase();
   const asset = fAsset.value.toLowerCase();
@@ -235,19 +45,14 @@ function render(){
 
   tbody.innerHTML = rows.map(j => `
     <tr>
-      <td><b>${j.wo_id || "-"}</b></td>
-      <td>${j.asset_id || "-"}</td>
-      <td>${j.problem || "-"}</td>
-      <td>${j.priority || "-"}</td>
+      <td><b>${j.wo_id}</b></td>
+      <td>${j.asset_id}</td>
+      <td>${j.problem}</td>
+      <td>${j.priority}</td>
+      <td><span class="badge ${j.status}">${j.status}</span></td>
       <td>
-        <span class="badge ${j.status}">
-          ${j.status}
-        </span>
-      </td>
-      <td>
-        ${
-          j.pdf_url && j.pdf_url.startsWith("http")
-          ? `<a href="${j.pdf_url}" target="_blank" class="btn-pdf">📄 View PDF</a>`
+        ${j.pdf_url
+          ? `<a href="${j.pdf_url}" target="_blank" class="btn-pdf">📄 PDF</a>`
           : "-"
         }
       </td>
@@ -255,6 +60,3 @@ function render(){
   `).join("");
 }
 </script>
-
-</body>
-</html>
